<resources>
    <string name="app_name">Movie DB</string>
    <string name="description">Description</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="language">Language</string>
    <string name="votes">Votes</string>
    <string name="popularity">Popularity</string>
    <string name="made_by">Made By</string>
    <string name="name">Name</string>
    <string name="student_id">Student ID</string>
    <string name="kelas">Class</string>
</resources>